--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </button>
             </div>
             <div class="hero__container--right">
-                <img src="/images/img-2.svg" alt="aliens" class="hero__container--img">
+                <img src="images/img-2.svg" alt="aliens" class="hero__container--img">
             </div>
         </div>
     </div>
